--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="port-br">
-<head>
-    <meta charset="UTF-8">
+ <head>
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <img class="logoimg" src="Guns-N-Roses-Logo.png" alt="">
+        <ul class="listacabecalho">
+            <li class="itemcabecalho">Home</li>
+            <li class="itemcabecalho">About the band</li>
+            <li class="itemcabecalho">Members</li>
+
+        </ul>
+        
+    </header>
     <h1>Guns N' Roses</h1>
     <p>Guns N' Roses é uma banda norte-americana de hard rock formada em Los Angeles, Califórnia, em 1985, que teve seu primeiro lançamento o álbum Appetite For Destruction. A banda lançou, até o momento, seis álbuns de estúdio, três EPs e um álbum ao vivo. A banda vendeu mais de 100 milhões de cópias em todo o mundo, sendo cerca de 43 milhões somente nos Estados Unidos.</p>
     
