--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="listacabecalho">
             <li class="itemcabecalho">Home</li>
             <li class="itemcabecalho">About the band</li>
-            <li class="itemcabecalho">Members</li>
+            <li class="itemcabecalho">Members and Albums</li>
 
         </ul>
         
