--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logoimg" src="Guns-N-Roses-Logo.png" alt="">
+        <img class="logoimg" src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
         <ul class="listacabecalho">
             <li class="itemcabecalho">Home</li>
             <li class="itemcabecalho">About the band</li>
