--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="cabecalho">
         <img class="logoimg" src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
         <ul class="listacabecalho">
-            <li class="itemcabecalho">Home teste</li>
+            <li class="itemcabecalho">News</li>
             <li class="itemcabecalho">About the band</li>
-            <li class="itemcabecalho">Members and Albums</li>
+            <li class="itemcabecalho">Members & Albums</li>
 
         </ul>
         
