--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <img class="logoimg" src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
         <ul class="listacabecalho">
-            <li class="itemcabecalho">News</li>
+            <li class="itemcabecalho"><a href="http://" target="_blank" rel="noopener noreferrer"> News<a/></li>
             <li class="itemcabecalho">About the band</li>
             <li class="itemcabecalho">Members & Albums</li>
 
