--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="cabecalho">
         <img class="logoimg" src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
         <ul class="listacabecalho">
-            <li class="itemcabecalho"><a href="http://" target="_blank" rel="noopener noreferrer"> News<a/></li>
-            <li class="itemcabecalho">About the band</li>
-            <li class="itemcabecalho">Members & Albums</li>
+            <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer"> News<a/></li>
+            <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer"> About the band</a></li>
+            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer"></a>Members & Albums</li>
 
         </ul>
         
