--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="listacabecalho">
             <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer"> News<a/></li>
             <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer"> About the band</a></li>
-            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer"></a>Members & Albums</li>
+            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
 
         </ul>
         
