--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         
     </header>
     <h1>Guns N' Roses</h1>
-    <p>Guns N' Roses é uma banda norte-americana de hard rock formada em Los Angeles, Califórnia, em 1985, que teve seu primeiro lançamento o álbum Appetite For Destruction. A banda lançou, até o momento, seis álbuns de estúdio, três EPs e um álbum ao vivo. A banda vendeu mais de 100 milhões de cópias em todo o mundo, sendo cerca de 43 milhões somente nos Estados Unidos.</p>
-    
+    <p>noticias e infos sobre a banda Guns N' Roses</p>
     <img src="Guns-N-Roses-e-as-duas-capas-de-Appetite-For-Destruction.-Credito-Divulgacao.webp" alt="">
     <img src="guns-n-roses-antigo-logo-destaque.jpg" alt="">
     <img src="FE5GM3ARM5AOTI3B7WFNELQVIY.jpg" alt="">
