--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,6 +15,8 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
+    <img src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
+    <img src="gunsatual.jpg" alt="">
     
 
 
