--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,7 +15,7 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
-    <img src="Guns-N-Roses-Logo.png" alt="">
+    <img src="gunsclassico.jpg" alt="">
     <img src="gunsatual.jpg" alt="">
     
 
