--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,7 +15,9 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
-    <p>aaaaa</p>
+    <ul class="band">
+    <li class="item">classica</li>
+    </ul>
     <img src="gunsclassico.jpg" alt="">
     <img src="gunsatual.jpg" alt="">
     
