--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,10 +15,9 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
-    <ul class="band">
-    <li class="item">classica</li>
-    </ul>
+    <p>formacao classica</p>
     <img src="gunsclassico.jpg" alt="">
+    <p>formacao atual</p>
     <img src="gunsatual.jpg" alt="">
     
 
