--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,9 +15,9 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
-    <p>formacao classica</p>
+    <p class="band">formacao classica</p>
     <img src="gunsclassico.jpg" alt="">
-    <p>formacao atual</p>
+    <p class="band">formacao atual</p>
     <img src="gunsatual.jpg" alt="">
     
 
