--- a/abouttheband.html
+++ b/abouttheband.html
@@ -15,11 +15,11 @@
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
         </ul>
     </header>
-    <p class="aaa">formacao classica </p>
+    <p>formacao classica </p>
     <img src="gunsclassico.jpg" alt="">
 
 
-    <p class="aaa">formacao atual</p>
+    <p>formacao atual</p>
     <img src="gunsatual.jpg" alt="">
 </body>
 </html>
