--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="logoimg" src="avatars-000241264100-70bfyu-t240x240.jpg" alt="">
         <ul class="listacabecalho">
-            <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer"> News<a/></li>
-            <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer"> About the band</a></li>
+            <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer">Menu<a/></li>
+            <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer">About the band</a></li>
             <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
 
         </ul>
