--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </header>
     <h1>Guns N' Roses</h1>
-    <p>noticias e infos sobre a banda Guns N' Roses</p>
+    <p>Iformações sobre a banda de rock Guns N' Roses</p>
     <img src="Guns-N-Roses-e-as-duas-capas-de-Appetite-For-Destruction.-Credito-Divulgacao.webp" alt="">
     <img src="guns-n-roses-antigo-logo-destaque.jpg" alt="">
     <img src="FE5GM3ARM5AOTI3B7WFNELQVIY.jpg" alt="">
