--- a/abouttheband.html
+++ b/abouttheband.html
@@ -20,7 +20,9 @@
     <img src="gunsclassico.jpg" alt="">
 
 
-    <p>formacao atual</p>
+    <p>Por conta de brigas e desentendimentos a banda foi se desmanchando, fazendo com que entrassem novos membros para que os antigos fossem substituidos, só sobrando Axl da sua formação original. Depois de um longo tempo com integrantes substitutos, no ano de 2016, foi anunciada a volta de dois dos integrantes classicos da banda, sendo eles Slash e Duff. Sendo assim, atualmente, a banda é formada por Axl (vocais), Slash (guitarra solo), Duff McKagan (baixo), Richard Fortus (guitarra rítmica), Frank Ferrer (bateria), Dizzy Reed (teclados, piano, percussão) e Melissa Reese (teclados).
+        A banda está a quase quinze anos sem lançar nenhum album novo, apenas liberando alguns singles mas os fãs ainda esperam por uma volta da banda.
+    </p>
     <img src="gunsatual.jpg" alt="">
 </body>
 </html>
