--- a/albums.html
+++ b/albums.html
@@ -12,6 +12,6 @@
         <ul class="listacabecalho">
             <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer"> News<a/></li>
             <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer"> About the band</a></li>
-            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Members & Albums</a></li>
+            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Albums</a></li>
         </ul>
     </header>
