--- a/albums.html
+++ b/albums.html
@@ -17,4 +17,4 @@
     </header>
     <p>Appetite for Destruction é o álbum de estreia da banda norte-americana de hard rock Guns N' Roses. Lançado em 21 de julho de 1987 pela Geffen Records, não obteve muito sucesso de início, mas começou a vender assim que a banda iniciou turnês pela América do Norte como abertura para grandes nomes do rock como The Cult, Alice Cooper e Aerosmith, além de seus próprios shows por festivais e casas de show.
     </p>
-    <img src="6" alt="">
+    <img src="61lRkH4QO0L._UF1000,1000_QL80_.jpg" alt="">
