--- a/albums.html
+++ b/albums.html
@@ -18,3 +18,21 @@
     <p>Appetite for Destruction é o álbum de estreia da banda norte-americana de hard rock Guns N' Roses. Lançado em 21 de julho de 1987 pela Geffen Records, não obteve muito sucesso de início, mas começou a vender assim que a banda iniciou turnês pela América do Norte como abertura para grandes nomes do rock como The Cult, Alice Cooper e Aerosmith, além de seus próprios shows por festivais e casas de show.
     </p>
     <img src="61lRkH4QO0L._UF1000,1000_QL80_.jpg" alt="">
+
+
+    <p>GN'R Lies, também conhecido como Lies, é o segundo álbum de estúdio da banda de hard rock Guns N' Roses. A capa simula uma primeira página de jornal, com algumas músicas como notícias. Lançado em 1988, Lies, seguiu as altas estatísticas de Appetite for Destruction. Alcançou a 2ª posição nas paradas, foi cinco vezes platina e foi eleito pelo Grammy como "melhor performance de hard rock", chegando ao ouro com a balada "Patience".
+    </p>
+    <img src="R-408199-1469091363-5308.jpg" alt="">
+
+
+    <p>Use Your Illusion I é o terceiro álbum de estúdio da banda norte-americana de hard rock Guns N' Roses. Este foi um dos dois álbuns lançados em conjunto com a turnê Use Your Illusion, sendo o outro álbum intitulado Use Your Illusion II, de modo que eles são tidos como um único álbum duplo. Com este lançamento, o Guns N' Roses virou uma das maiores bandas dos anos 90.
+    </p>
+    <img src="812UUC50GLL._UF1000,1000_QL80_.jpg" alt="">
+
+
+    <p>Use Your Illusion II é o quarto álbum de estúdio da banda americana de hard rock Guns N' Roses, lançado em 17 de setembro de 1991, simultaneamente com Use Your Illusion I. Use Your Illusion II é o mais popular dos dois lançamentos.
+    </p>
+    <img src="O-0002.jpg" alt="">
+
+
+    
