--- a/abouttheband.html
+++ b/abouttheband.html
@@ -12,7 +12,7 @@
         <ul class="listacabecalho">
             <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer"> News<a/></li>
             <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer"> About the band</a></li>
-            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Albums</a></li>
+            <li class="itemcabecalho"><a href="albums.html" target="_blank" rel="noopener noreferrer">Albums</a></li>
         </ul>
     </header>
     <p>O grupo foi formado no início de 1985 pelos membros do Hollywood Rose Axl Rose (vocais) e Izzy Stradlin (guitarra rítmica); e membros do L.A. Guns Tracii Guns (guitarra solo), Ole Beich (baixo) e Robbie Gardner (bateria). A nova banda criou o seu nome a partir da combinação de dois dos nomes dos membros do grupo. Depois de pouco tempo (várias fontes indicam que apenas dois ou três shows foram feitos com os integrantes Guns, Beich & Gardner), o baixista Ole Beich foi substituído por Duff McKagan, enquanto a falta de Tracii Guns nos ensaios levou à sua substituição por Slash.
