--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="listacabecalho">
             <li class="itemcabecalho"><a href="index.html" target="_blank" rel="noopener noreferrer">Menu<a/></li>
             <li class="itemcabecalho"><a href="abouttheband.html" target="_blank" rel="noopener noreferrer">About the band</a></li>
-            <li class="itemcabecalho"><a href="membersalbums.html" target="_blank" rel="noopener noreferrer">Albums</a></li>
+            <li class="itemcabecalho"><a href="albums.html" target="_blank" rel="noopener noreferrer">Albums</a></li>
 
         </ul>
         
