--- a/albums.html
+++ b/albums.html
@@ -35,3 +35,6 @@
     <img src="O-0002.jpg" alt="">
 
 
+    <p>"The Spaghetti Incident?" é o quinto álbum de estúdio gravado pela banda de rock estadunidense Guns N' Roses. Marca também o fim da era clássica da banda. O disco consiste de covers de músicas punk e rock dos anos 70 e 80.
+    </p>
+    <img src="71olggClFUL._UF1000,1000_QL80_.jpg" alt="">
