--- a/albums.html
+++ b/albums.html
@@ -38,3 +38,7 @@
     <p>"The Spaghetti Incident?" é o quinto álbum de estúdio gravado pela banda de rock estadunidense Guns N' Roses. Marca também o fim da era clássica da banda. O disco consiste de covers de músicas punk e rock dos anos 70 e 80.
     </p>
     <img src="71olggClFUL._UF1000,1000_QL80_.jpg" alt="">
+
+    <p>Chinese Democracy é o sexto álbum de estúdio da banda norte-americana Guns N' Roses, lançado mundialmente em novembro de 2008 após ficar conhecido como o "disco eternamente adiado", pois a banda começara a trabalhar nele em 1996 e cancelou todas as datas de lançamento previstas desde o ano até a distribuição. Este é o seu primeiro álbum de estúdio desde The Spaghetti Incident? de 1993, e o primeiro a apresentar apenas material original desde Use Your Illusion II de 1991.
+    </p>
+    <img src="81MCS7izfxL._UF1000,1000_QL80_.jpg" alt="">
